@@ -1,5 +1,12 @@
 2007-05-16  Boyd Timothy <btimothy@gmail.com> 
 
+	* Banter/MessageStyleInfo.cs: Added a debug msg. so we can tell when
+	  MessageStyleInfo.IsValid is called.
+	* Banter/ThemeManager.cs: Fixed userThemePath.  Also implemented
+	  UpdateMessageStyles in the UpdateThread.
+
+2007-05-16  Boyd Timothy <btimothy@gmail.com> 
+
 	* Banter/Utilities.cs: Added CreateDirectoryIfNeeded ().
 	* Banter/ThemeManager.cs: Stubbed out starting the update thread and
 	  also exposed the paths to the themes and styles.
